Premenovanie formularov (form na pridanie bude zvlast), pridanie chybajucich instancnych premennych do entit podla databazy

--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/PamiatkaForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/PamiatkaForm.form
@@ -26,19 +26,14 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="krajinaLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="mestoLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="nazovLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="krajinaLabel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="krajinaComboBox" min="-2" pref="189" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="krajinaComboBox" pref="136" max="32767" attributes="0"/>
-                  <Component id="mestoTextField" max="32767" attributes="0"/>
-                  <Component id="nazovTextField" max="32767" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-              <Component id="jXDatePicker1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="79" max="32767" attributes="0"/>
+              <EmptySpace pref="146" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -47,21 +42,12 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="nazovLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="nazovTextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jXDatePicker1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="krajinaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="krajinaComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="krajinaComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="krajinaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="mestoTextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="mestoLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace pref="184" max="32767" attributes="0"/>
+              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="237" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -79,21 +65,10 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="mestoLabel">
+    <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Mesto:"/>
+        <Property name="text" type="java.lang.String" value="jLabel1"/>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="mestoTextField">
-    </Component>
-    <Component class="javax.swing.JLabel" name="nazovLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="N&#xe1;zov:"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="nazovTextField">
-    </Component>
-    <Component class="org.jdesktop.swingx.JXDatePicker" name="jXDatePicker1">
     </Component>
   </SubComponents>
 </Form>
