uprava metody priadtButton v Pridat formoch uprava ZobrazPodujatieForm vytvorenie UpravitPodujatieForm pridanie UpravitPodrobnostiPodujatieForm

--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/PridatViacdnovyVyletForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/PridatViacdnovyVyletForm.form
@@ -35,8 +35,8 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="odchodLabel" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="odchodDatePicker" min="-2" pref="97" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="odchodDatePicker" min="-2" pref="104" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="prichodLabel" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="prichodDatePicker" max="32767" attributes="0"/>
@@ -63,8 +63,8 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="krajinaLabel" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
-                                      <Component id="krajinaComboBox" min="-2" pref="97" max="-2" attributes="0"/>
-                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                      <Component id="krajinaComboBox" min="-2" pref="104" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
                                       <Component id="mestoLabel" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Component id="mestoTextField" min="-2" pref="91" max="-2" attributes="0"/>
